# simple-python-chat

./: README.md
chat-server/fastapi-basic/: README.md  main_extra.py  pyproject.toml
chat-server/fastapi-redis-pub-sub/: README.md  main.py
chat-server/fastapi-server/: pyproject.toml
chat-server/quart-redis-pub-sub/: README.md  main.py
chat-server/quart-server/: pyproject.toml
