[tool.poetry]
name = "quart-server"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
quart = "^0.14.1"
aioredis = "^1.3.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
